-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Minor
-
Resolution: Fixed
-
Affects Version/s: 10.3.10, 10.2.22
-
Fix Version/s: 10.2.25
-
Component/s: Scripts & Clients
-
Labels:
-
Environment:Debian 9.5, kernel version 4.9.0-6-amd64
Failed to get the result using mysqlbinlog flashback option on large binlog file , failing case is as shown in the attachment pictures.
I've already figured it out - as long as the io_cache used within the flashback operation larger than 2147479552, which is the max value for read_buffer_size according to the mysql doc, flashback failure should happend.
I've created a pull request: https://github.com/MariaDB/server/pull/1214, please check
update at 2018.03.08:
Actually, I later realized that this bug was already fixed in release 10.3.13(seems like the same problem according to the commit message of mysys/mf_iocache.c) , but since it is not yet applied to branch 10.2, I still made this pull request , plus adding the required mtr test and result file.